PROJECT(GalilControllerSRC)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(SOURCE
	Galil.cxx
	main.cxx)

SET(HEADERS
	Galil.h)

# Run moc on header files
QT4_WRAP_CPP(HEADERS_MOC ${HEADERS})

# Include file generated 
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})
INCLUDE_DIRECTORIES(${QT_QTNETWORK_INCLUDE_DIR})

ADD_EXECUTABLE(GalilController ${SOURCE} ${HEADERS_MOC})
TARGET_LINK_LIBRARIES(GalilController ${QT_LIBRARIES} ${QT_QTNETWORK_LIBRARIES})
